Add RuleChain thread pool support.