@@ -1,16 +1,15 @@
 package com.twinkle.framework.configure.component;
 
 import com.alibaba.fastjson2.JSONObject;
-import com.twinkle.framework.api.component.IComponent;
 import com.twinkle.framework.api.component.IComponentFactory;
-import com.twinkle.framework.api.config.Configurable;
+import com.twinkle.framework.api.component.IConfigurableComponent;
 import com.twinkle.framework.api.constant.ExceptionCode;
 import com.twinkle.framework.api.exception.ConfigurationException;
 import com.twinkle.framework.asm.Bean;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.NoSuchBeanDefinitionException;
 import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 import org.springframework.beans.factory.support.BeanDefinitionBuilder;
 import org.springframework.beans.factory.support.BeanDefinitionRegistry;
 import org.springframework.util.DigestUtils;
@@ -25,80 +24,40 @@ import org.springframework.util.DigestUtils;
  * @since JDK 1.8
  */
 @Slf4j
-public class ComponentFactory implements IComponentFactory {
+public class ComponentFactory extends AbstractComponentFactory {
     private BeanDefinitionRegistry registry;
 
-    private static ComponentFactory componentFactory;
+    private static IComponentFactory componentFactory;
 
     public ComponentFactory(BeanDefinitionRegistry _registry) {
         this.registry = _registry;
         componentFactory = this;
     }
 
-    public static ComponentFactory getInstance() {
+    public ComponentFactory(ConfigurableListableBeanFactory beanFactory) {
+        componentFactory = new LauncherComponentFactory(beanFactory);
+    }
+
+    public static IComponentFactory getInstance() {
         if (componentFactory == null) {
             throw new ConfigurationException(ExceptionCode.COMPONENT_FACTORY_NOT_INITIALIZED, "Component Factory has not been initialized.");
         }
         return componentFactory;
     }
 
-    @Override
-    public <T extends Configurable> T loadComponent(JSONObject _obj) {
-        return this.loadComponent(null, _obj);
-    }
 
     @Override
-    public <T extends Configurable> T loadGeneralComponent(JSONObject _obj) {
+    public <T extends IConfigurableComponent> T loadComponent(String _parentPath, JSONObject _obj) {
         if (_obj.isEmpty()) {
             return null;
         }
         String tempClassName = _obj.getString(KEY_CLASS_NAME);
-        if (StringUtils.isBlank(tempClassName)) {
-            throw new ConfigurationException(ExceptionCode.COMPONENT_CLASS_MISSED, "The [" + _obj + "]component class is empty");
-        }
+        String tempComponentName = this.getComponentName(_parentPath, _obj);
         try {
             ClassLoader tempClassLoader = this.getClass().getClassLoader();
-            Class tempClass = tempClassLoader.loadClass(tempClassName);
+            Class<T> tempClass = (Class<T>) tempClassLoader.loadClass(tempClassName);
             if (null != tempClass) {
-                T tempComponent = (T) tempClass.newInstance();
-                tempComponent.configure(_obj);
-                return tempComponent;
-            }
-        } catch (NoClassDefFoundError | ClassNotFoundException ex) {
-            throw new IllegalArgumentException("Cannot resolve dependencies for class: " + tempClassName, ex);
-        } catch (IllegalAccessException e) {
-            throw new IllegalArgumentException("Cannot resolve dependencies for class: " + tempClassName, e);
-        } catch (InstantiationException e) {
-            throw new IllegalArgumentException("Cannot resolve dependencies for class: " + tempClassName, e);
-        }
-        return null;
-    }
-
-    @Override
-    public <T extends Configurable> T loadComponent(String _componentName, JSONObject _obj) {
-        if (_obj.isEmpty()) {
-            return null;
-        }
-        String tempClassName = _obj.getString(KEY_CLASS_NAME);
-        if (StringUtils.isBlank(tempClassName)) {
-            throw new ConfigurationException(ExceptionCode.COMPONENT_CLASS_MISSED, "The [" + _obj + "]component class is empty");
-        }
-        String tempComponentName = _componentName;
-        if (StringUtils.isBlank(tempComponentName)) {
-            tempComponentName = _obj.getString(KEY_COMPONENT_NAME);
-            if (StringUtils.isBlank(tempComponentName)) {
-                int tempIndex = tempClassName.lastIndexOf(".");
-                if (tempIndex > 0) {
-                    tempComponentName = tempClassName.substring(tempIndex + 1);
-                } else {
-                    tempComponentName = tempClassName;
-                }
-            }
-        }
-        try {
-            ClassLoader tempClassLoader = this.getClass().getClassLoader();
-            Class tempClass = tempClassLoader.loadClass(tempClassName);
-            if (null != tempClass) {
+                log.debug("The component name is:{}->{}", _parentPath, tempComponentName);
                 String tempBeanName = DigestUtils.md5DigestAsHex(tempComponentName.getBytes());
                 try {
                     this.registry.getBeanDefinition(tempBeanName);
@@ -106,21 +65,24 @@ public class ComponentFactory implements IComponentFactory {
                             tempComponentName, tempClassName);
                     throw new ConfigurationException(ExceptionCode.LOGIC_CONF_DUPLICATE_COMPONENT_FOUND, "Found the duplicate bean [" + tempComponentName + "] had been registered already.");
                 } catch (NoSuchBeanDefinitionException ex) {
-                    log.debug("Did not find the bean with name [{}].", tempComponentName);
+                    log.debug("Did not find the bean with name [{}]->[{}].", tempComponentName, tempClassName);
                 }
-                T tempComponent = (T) tempClass.newInstance();
-                if (tempComponent instanceof IComponent) {
-                    ((IComponent) tempComponent).setFullPathName(tempComponentName);
-                }
+                T tempComponent = tempClass.getDeclaredConstructor().newInstance();
+                tempComponent.setParentPath(_parentPath);
+                tempComponent.setAliasName(tempComponentName.substring(tempComponentName.lastIndexOf("\\") + 1));
+
                 tempComponent.configure(_obj);
 
                 BeanDefinitionBuilder tempBeanDefinitionBuilder = BeanDefinitionBuilder
-                        .genericBeanDefinition(tempClass, () -> tempComponent);
+                        .genericBeanDefinition(tempClass, () -> {
+                            log.debug("Supplier the instance [{}]->[{}].", tempComponentName, tempClassName);
+                            return tempComponent;
+                        });
                 BeanDefinition tempComponentBeanDefinition = tempBeanDefinitionBuilder
                         .getRawBeanDefinition();
                 this.registry.registerBeanDefinition(tempBeanName, tempComponentBeanDefinition);
 
-                log.debug("Load the bean [{}] -> [{}] had been successfully.",
+                log.debug("Load the bean [{}] -> [{}] has been successfully.",
                         tempComponentName, tempClassName);
                 return tempComponent;
             }
@@ -128,6 +90,46 @@ public class ComponentFactory implements IComponentFactory {
             throw new IllegalArgumentException("Cannot resolve dependencies for class: " + tempClassName, ex);
         } catch (Throwable te) {
             throw new IllegalArgumentException("Problem loading class:" + tempClassName, te);
+        } finally {
+        }
+        return null;
+    }
+
+    @Override
+    public <T extends IConfigurableComponent> T loadPrototypeComponent(String _parentPath, JSONObject _obj, int _index) {
+        if (_obj.isEmpty()) {
+            return null;
+        }
+        String tempClassName = _obj.getString(KEY_CLASS_NAME);
+        String tempComponentName = this.getComponentName(_parentPath, _obj, _index);
+        try {
+            ClassLoader tempClassLoader = this.getClass().getClassLoader();
+            Class<T> tempClass = (Class<T>) tempClassLoader.loadClass(tempClassName);
+            if (null != tempClass) {
+                String tempBeanName = DigestUtils.md5DigestAsHex(tempComponentName.getBytes());
+                T tempComponent = tempClass.getDeclaredConstructor().newInstance();
+                tempComponent.setParentPath(_parentPath);
+                tempComponent.setAliasName(tempComponentName.substring(tempComponentName.lastIndexOf("\\") + 1));
+//                tempComponent.setAliasName(tempComponentName.substring(tempComponentName.lastIndexOf("\\") + 1));
+
+                tempComponent.configure(_obj);
+
+                BeanDefinitionBuilder tempBeanDefinitionBuilder = BeanDefinitionBuilder
+                        .genericBeanDefinition(tempClass, () -> tempComponent);
+                BeanDefinition tempComponentBeanDefinition = tempBeanDefinitionBuilder
+                        .getRawBeanDefinition();
+                tempComponentBeanDefinition.setScope(BeanDefinition.SCOPE_PROTOTYPE);
+                this.registry.registerBeanDefinition(tempBeanName, tempComponentBeanDefinition);
+
+                log.debug("Load the prototype bean [{}] -> [{}] has been successfully.",
+                        tempComponentName, tempClassName);
+                return tempComponent;
+            }
+        } catch (NoClassDefFoundError ex) {
+            throw new IllegalArgumentException("Cannot resolve dependencies for class: " + tempClassName, ex);
+        } catch (Throwable te) {
+            throw new IllegalArgumentException("Problem loading class:" + tempClassName, te);
+        } finally {
         }
         return null;
     }
